<resources>
    /// Titulos de las apps
    <string name="modify_event_titulo">Modify Event</string>
    <string name="daily_view">Daily View</string>
    <string name="your_calendars">Your Calendars</string>
    <string name="new_acc">New account</string>
    <string name="Profile_info">Profile Information</string>
    <string name="add_new_event">Add New Event</string>
    <string name="modify">Modify</string>


    ///Strings Modify Event

    <string name="calendar">Calendar</string>
    <string name="day_of_the_week">Day of the week</string>
    <string name="Everyday">Everyday</string>
    <string name="Every_week">Every week</string>
    <string name="Every_month">Every month</string>
    <string name="Never">Never</string>
    <string name="Repeat">Repeat</string>
    <string name="All_day">All day</string>
    <string name="Reminder">Reminder</string>
    <string name="before">minutes before</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="from1">From</string>
    <string name="evid">ID</string>
    <string name="to1">To</string>
    <string name="Discard">Discard</string>
    <string name="save">Save</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="sa">Sat</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sun">Sun</string>
    <string name="cero">0</string>
    <string name="n13">13</string>
    <string name="n14">14</string>
    <string name="n15">15</string>
    <string name="n16">16</string>
    <string name="n17">17</string>
    <string name="n18">18</string>
    <string name="n19">19</string>
    <string name="n20">20</string>
    <string name="n21">21</string>
    <string name="n22">22</string>
    <string name="n23">23</string>
    <string name="n24">24</string>
    <string name="n25">25</string>
    <string name="n26">26</string>
    <string name="n27">27</string>
    <string name="n28">28</string>
    <string name="n29">29</string>
    <string name="n30">30</string>
    <string name="n31">31</string>

    ///Strings Daily views

    <string name="dia_actual">Monday 15 of February, 2024</string>
    <string name="evento_reciente1">Presentation of project</string>
    <string name="evento_reciente2">Interview</string>
    <string name="hora_1">9:00 AM</string>
    <string name="hora_cero">00:00</string>
    <string name="hora_2">10:00 AM</string>
    <string name="hora_3">11:00 AM</string>
    <string name="evento_none">none</string>


    ///Strings Dashboards

    <string name="upcoming_events">Todays upcoming events</string>
    <string name="weekly_view">Weekly View</string>
    <string name="semana_mostrada">Feb 1(-)5</string>
    <string name="new_habits">New Habit</string>
    <string name="event_not_1">Meeting with Jhon</string>
    <string name="event_not_2">Doctor´s appointment</string>
    <string name="event_not_3">Skincare routine</string>
    <string name="hora_not_3">9:00 AM</string>
    <string name="hora_not_1">10:00 AM</string>
    <string name="hora_not_2">11:00 AM</string>

    ///Strings your calendars
    <string name="created_by_you">Designed for you</string>
    <string name="Add_new">Add new</string>
    <string name="daily_v">Your Daily View</string>
    <string name="finish">Mark as finish</string>
    <string name="delete_event">Delete</string>
    <string name="Emp_name">empty</string>
    <string name="add">Add</string>
    <string name="personal">Personal</string>
    <string name="family">Family</string>
    <string name="work">Work</string>
    <string name="other">Others</string>
    <string name="colombian_holiday">Colombian Holidays</string>


    <string name="app_name">prueba2</string>

    <string name="name_of_event">Name of event</string>
    <string name="event">Event</string>
    <string name="event1">event1</string>
    <string name="M">M</string>
    <string name="F">F</string>
    <string name="Th">Th</string>
    <string name="T">Tue</string>
    <string name="W">W</string>

    <string name="welcome_message">Welcome to your routine planner!</string>
    <string name="email">Email</string>
    <string name="bith">Birthday</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="signout">Sign-out</string>
    <string name="changepass">Change Password</string>
    <string name="help">Help</string>
    <string name="change_pass">Change your current password</string>


    <string name="confirm_new_pass">Confirm new password</string>
    <string name="create_new_pass">New password</string>
    <string name="confirm_past_pass">Confirm last password</string>

    <string name="change_password">Change password</string>


    <string name="create_acc">Create account</string>

    <string name="delete">Delete account</string>

    <string name="hi_planner">H! PLANNER</string>

    <string name="confirm_mail">Confirm mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="donthave">Don´t have an account?</string>

    <string name="sign_up_free">Sign-up here for free!</string>


    <string name="username">Username</string>
    <string name="back">Back</string>
    <string name="name">Name</string>


    //Strings track
    <string name="track">Track your habits</string>
    <string name="track_message">You have completed your goal only 3 days this week. Keep going!</string>


    //strings de
    cami-----------------------------------------------------------------------------------------

    <string name="keep_it_up_you_can_save_up_to_500_this_month">Keep it up! You can save up to 500 this month.</string>
    <string name="modify_budget">Modify Budget</string>
    <string name="spending_through_the_week">Spending through the week</string>
    <string name="home_budget">Home Budget</string>
    <string name="home">Home</string>
    <string name="food_dinning"><![CDATA[Food & Dinning]]></string>
    <string name="health_fitness"><![CDATA[Health & Fitness]]></string>
    <string name="add_category">Add Category</string>
    <string name="add_spending">Add Spending</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="budget_for_category">Budget for category</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_category_new">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="new_category_name">New Category Name</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_cat">Delete</string>
    <string name="save_category">Save</string>
    <string name="modify_budget_popup">Modify Budget</string>
    <string name="new_budget">New Budget</string>
    <string name="add_new_category">Add New Category</string>
    <string name="name_of_category">Name of Category</string>
    <string name="add_category_new_new">Add Category</string>

    <!-- Menu
    //<string name="app_name">Navigation Drawer</string>-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_spending_save">Add Spending</string>
    <string name="january_budget">January Budget</string>
    <string name="_1300_of_2000">1300 of 2000</string>


    <string name="chooseColor">Choose your color</string>

    <string name="mondays_Events">Monday´s Events</string>
    <string name="tuesdays_Events">Tuesday´s Events</string>
    <string name="wednesdays_Events">Wednesday´s Events</string>
    <string name="thursdays_Events">Thursday´s Events</string>
    <string name="fridays_Events">Friday´s Events</string>
    <string name="saturdays_Events">Saturday´s Events</string>
    <string name="sundays_Events">Sunday´s Events</string>
    //strings de
    sofi-----------------------------------------------------------------------------------------


</resources>