<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="259dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_black"
            android:gravity="center_horizontal"
            android:text="@string/hi_planner"
            android:textColor="#5E9EED"
            android:textSize="44sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-11dp"
            tools:layout_editor_absoluteY="148dp" />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/username"
            android:textSize="20sp"
            tools:fontFamily="@font/montserrat_light" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:hint="user1" />



        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:text="@string/password"
            android:textSize="20sp"
            tools:fontFamily="@font/montserrat_light"
            />




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:hint="pass" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/dont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthave"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            tools:fontFamily="@font/montserrat_light" />
        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_free"
            android:layout_gravity="center_horizontal"
            android:textColor="#0000FF"
            android:textSize="20sp"
            tools:fontFamily="@font/montserrat_light" />




    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>

